# almoner

./: .env.example  .gitignore  .gitleaks.toml  .vercelignore  DEPLOY.md  LICENSE  README.md  package-lock.json  package.json  railway.json  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
app/: index.html  package.json  tsconfig.json  vite.config.js
app/public/: deployment.json
app/public/circuit/: aid_claim.vkey.json  aid_claim.wasm
app/src/: App.tsx  main.tsx  styles.css
app/src/components/: ClaimLinkDrawer.tsx  CommandPalette.tsx  MobileNav.tsx  Peek.tsx  QRCanvas.tsx  Sidebar.tsx  Topbar.tsx
app/src/docs/: Docs.tsx  content.tsx  docs.css
app/src/landing/: FlowDiagram.tsx  Landing.tsx  icons.tsx  landing.css  useReveal.ts
app/src/lib/: Charts.tsx  Confetti.tsx  PrivacyLens.tsx  cardArt.tsx  config.ts  credential.ts  demo.ts  greeting.ts  motion.tsx  pool.ts  serverApi.ts  store.ts  ui.tsx
app/src/surfaces/: Auditor.tsx  Beneficiary.tsx  Claim.tsx  Dashboard.tsx  OrgAdmin.tsx  claim.css
circuits/: package.json
circuits/scripts/: build.sh
circuits/src/: aid_claim.circom  merkle.circom
contracts/: Cargo.toml
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  test.rs  verifier.rs  vk.rs
docs/: ARCHITECTURE.md  DEMO.md
lib/: package.json
lib/src/: commitment.ts  field.ts  groth16.ts  index.ts  merkle.ts  poseidon.ts  prover.ts  registry.ts  types.ts  vendor.d.ts  viewkey.ts
lib/test/: selftest.ts
scripts/: browser-check.ts  browser-claim.ts  deploy.ts  e2e.ts  gen-fixture.ts  gen-vk.ts
server/: index.ts
(+2 files in other folders)
